--- a/static/form.html
+++ b/static/form.html
@@ -1,81 +1,223 @@
-<!DOCTYPE html>
-
-<html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="{{url_for('static',filename='scripts/home.js')}}"></script>
-    <!--
-    <script src="../scripts/script.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="http://fonts.googleapis.com/css?family=Helvetica+Neue" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Cabin" rel="stylesheet" type="text/css">-->
-    <link rel="stylesheet" type="text/css" href="{{url_for('static',filename='home.css')}}">
+<!DOCTYPE HTML>
+<html>
+<head><meta name="viewport" content="width=device-width"/>
+<title>Salique Theme Multipurpose Responsive </title>
+<!-- STYLES & JQUERY
+================================================== -->
+<link rel="stylesheet" type="text/css" href="css/style.css"/>
+<link rel="stylesheet" type="text/css" href="css/icons.css"/>
+<link rel="stylesheet" type="text/css" href="css/skinblue.css"/><!-- Change skin color here -->
+<link rel="stylesheet" type="text/css" href="css/responsive.css"/>
+<script src="js/jquery-1.9.0.min.js"></script><!-- scripts at the bottom of the document -->
 </head>
-
-
 <body>
+<!-- TOP LOGO & MENU
+================================================== -->
+<div class="grid">
+	<div class="row space-bot">
+		<!--Logo-->
+		<div class="c4">
+			<a href="index.html">
+				<img src="images/logo.png" class="logo" alt="">
+			</a>
+		</div>
+		<!--Menu-->
+		<div class="c8">
+			<nav id="topNav">
+			<ul id="responsivemenu">
+				<li class="active"><a href="index.html"><i class="icon-home homeicon"></i></a></li>
+				<li><a href="#">Templates</a>
+				<ul style="display: none;">
 
+					<li><a href="about.html">About</a></li>
+					<li><a href="services.html">Services</a></li>
+					<li><a href="testimonials.html">Testimonials</a></li>
+					<li><a href="faq.html">F.A.Q.s</a></li>
+					<li><a href="gallery.html">Gallery</a></li>
+					<li><a href="timeline.html">Timeline</a></li>
+					<li class="last"><a href="404.html">404 Page</a></li>
+				</ul>
+				</li>
+				<li><a href="#">Elements</a>
+				<ul style="display: none;">
 
-<div class = "container-fluid">
+					<li><a href="team.html">Team</a></li>
+					<li><a href="pricing.html">Pricing Tables</a></li>
+					<li><a href="columns.html">Columns</a></li>
+					<li><a href="rightsidebar.html">Right Sidebar</a></li>
+					<li><a href="leftsidebar.html">Left Sidebar</a></li>
 
-  <div class="row">
+				</ul>
+				</li>
+				<li><a href="#">Portfolio</a>
+				<ul>
+					<li><a href="portfolio2.html">Two Columns</a></li>
+					<li><a href="portfolio3.html">Three Columns</a></li>
+					<li><a href="portfolio4.html">Four Columns</a></li>
+					<li><a href="portfolio5.html">Five Columns</a></li>
 
-    <div class="col-sm-12 text-center" id="home-row-1">
+					<li><a href="portfolio-masonry3.html">Three Masonry</a></li>
+					<li><a href="portfolio-masonry4.html">Four Masonry</a></li>
+					<li><a href="portfolio-masonry5.html">Five Masonry</a></li>
+					<li><a href="singleproject.html">Project Details</a></li>
+				</ul>
+				</li>
+				<li class="last"><a href="contact.html">Contact</a></li>
 
-        <video class="form-video" muted>
-
-          <source src="{{ url_for('static', filename='videos/'+file+'.mp4') }}"  type="video/mp4">
-
-        </video>
-
-]
-        <h2>Form</h2>
-
-
-        <form action="{{ url_for('download',filename=file) }}" method="post">
-
-          <label for="#">input 1</label>
-          <input type="text" name="replace_text1">
-          <br>
-
-          <label for="#">input 2</label>
-          <input type="text" name="replace_text2">
-          <br>
-
-          <label for="#">input 3</label>
-          <input type="text" name="replace_text3">
-          <br>
-
-          <label for="#">input 4</label>
-          <input type="text" name="replace_text4">
-          <br>
-
-          <input type="submit">
-
-        </form>
-
-        <div class="text-container">
-
-          <p> </p>
-
-        </div>
-
-    </div>
-
-  </div>
-
+			</ul>
+			</nav>
+		</div>
+	</div>
 </div>
+<!-- HEADER
+================================================== -->
+<div class="undermenuarea">
+	<div class="boxedshadow">
+	</div>
+	<div class="grid">
+		<div class="row">
+			<div class="c8">
+				<h1 class="titlehead">Template</h1>
+			</div>
+		</div>
+	</div>
+</div>
+<!-- CONTENT
+================================================== -->
+<div class="grid">
+		<div class="shadowundertop"></div>
+		<div class="row space-bot">
+			<div class="c12">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/nSvecbn8uNc" frameborder="0" allowfullscreen></iframe>			</div>
+		</div>
+		<div class="row space-top">
+			<!-- CONTACT FORM -->
+			<div class="c8 space-top">
+				<h1 class="maintitle">
+				<span><i class="icon-envelope-alt"></i> Customize your template</span>
+				</h1>
+				<div class="wrapcontact">
+					<div class="done">
+						<div class="alert-box success ctextarea">
+							 Your message has been sent. Thank you! <a href="" class="close">x</a>
+						</div>
+					</div>
+					<form method="post" action="contact.php" id="contactform">
+						<div class="form">
+							<div class="c6 noleftmargin">
+								<label>Title Text</label>
+								<input type="text" name="name">
+							</div>
+							<div class="c6 noleftmargin">
+								<label>E-mail address</label>
+								<input type="text" name="email">
+							</div>
+						</div>
+					</form>
+				</div>
+			</div>
 
+		</div>
+</div><!-- end grid -->
 
+<!-- FOOTER
+================================================== -->
+<div id="wrapfooter">
+	<div class="grid">
+		<div class="row" id="footer">
+			<!-- to top button  -->
+			<p class="back-top floatright">
+				<a href="#top"><span></span></a>
+			</p>
+			<!-- 1st column -->
+			<div class="c3">
+				<img src="images/logo-footer.png" style="padding-top: 70px;" alt="">
+			</div>
+			<!-- 2nd column -->
+			<div class="c3">
+				<h2 class="title"><i class="icon-twitter"></i> Follow us</h2>
+				<hr class="footerstress">
+				<div id="ticker" class="query">
+				</div>
+			</div>
+			<!-- 3rd column -->
+			<div class="c3">
+				<h2 class="title"><i class="icon-envelope-alt"></i> Template</h2>
+				<hr class="footerstress">
+				<dl>
+					<dt>2536 Zamora Road, Missisipi, 74C</dt>
+					<dd><span>Telephone:</span>+1 348 271 9483</dd>
+					<dd>E-mail: <a href="more.html">mail@yourweb.com</a></dd>
+				</dl>
+				<ul class="social-links" style="margin-top:15px;">
+					<li class="twitter-link smallrightmargin">
+					<a href="#" class="twitter has-tip" target="_blank" title="Follow Us on Twitter">Twitter</a>
+					</li>
+					<li class="facebook-link smallrightmargin">
+					<a href="#" class="facebook has-tip" target="_blank" title="Join us on Facebook">Facebook</a>
+					</li>
+					<li class="google-link smallrightmargin">
+					<a href="#" class="google has-tip" title="Google +" target="_blank">Google</a>
+					</li>
+					<li class="linkedin-link smallrightmargin">
+					<a href="#" class="linkedin has-tip" title="Linkedin" target="_blank">Linkedin</a>
+					</li>
+					<li class="pinterest-link smallrightmargin">
+					<a href="#" class="pinterest has-tip" title="Pinterest" target="_blank">Pinterest</a>
+					</li>
+				</ul>
+			</div>
+			<!-- 4th column -->
+			<div class="c3">
+				<h2 class="title"><i class="icon-link"></i> Links</h2>
+				<hr class="footerstress">
+				<ul>
+					<li>Services</li>
+					<li>Privacy Policy</li>
+					<li>Shortcodes</li>
+					<li>Columns</li>
+					<li>Portfolio</li>
+					<li>Blog</li>
+					<li>Contact</li>
+					<li>Font Awesome</li>
+					<li>Single Project</li>
+					<li>Home</li>
+				</ul>
+			</div>
+			<!-- end 4th column -->
+		</div>
+	</div>
+</div>
+<!-- copyright area -->
+<div class="copyright">
+	<div class="grid">
+		<div class="row">
+			<div class="c6">
+				 Your Name &copy; 2015. All Rights Reserved.
+			</div>
+			<div class="c6">
+				<span class="right">
+				Premium Template by WowThemesNet </span>
+			</div>
+		</div>
+	</div>
+</div>
+<!-- JAVASCRIPTS
+================================================== -->
+<!-- all -->
+<script src="js/modernizr-latest.js"></script>
 
+<!-- menu & scroll to top -->
+<script src="js/common.js"></script>
 
+<!-- cycle -->
+<script src="js/jquery.cycle.js"></script>
 
+<!-- twitter -->
+<script src="js/jquery.tweet.js"></script>
+
+<!-- contact form -->
+<script src="js/contact.js"></script>
 
 </body>
-
-
 </html>
