--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,7 @@
 <html>
 <head><meta name="viewport" content="width=device-width"/>
 <title> Instant Adobe </title>
-<!-- STYLES & JQUERY 
+<!-- STYLES & JQUERY
 ================================================== -->
 <link rel="stylesheet" type="text/css" href="css/style.css"/>
 <link rel="stylesheet" type="text/css" href="css/icons.css"/>
@@ -27,25 +27,25 @@
 			<nav id="topNav">
 			<ul id="responsivemenu">
 				<li class="active"><a href="index.html"><i class="icon-home homeicon"></i><span class="showmobile">Home</span></a></li>
-				<li><a href="#">Videos</a>
-				<!--
+				<li><a href="gallery.html">Videos</a>
+				<!-- FUCK ME IN THE ASS
 				<ul style="display: none;">
 					<li><a href="about.html">About</a></li>
-					<li><a href="services.html">Services</a></li>					
-					<li><a href="testimonials.html">Testimonials</a></li>								
+					<li><a href="services.html">Services</a></li>
+					<li><a href="testimonials.html">Testimonials</a></li>
 					<li class="last"><a href="404.html">404 Page</a></li>
 				</ul>
 				-->
 				</li>
 				<li><a href="#">About Us</a>
 				<!--
-				<ul style="display: none;">					
+				<ul style="display: none;">
 					<li><a href="team.html">Team</a></li>
 					<li><a href="pricing.html">Pricing Tables</a></li>
 					<li><a href="columns.html">Columns</a></li>
 					<li><a href="rightsidebar.html">Right Sidebar</a></li>
-					<li><a href="leftsidebar.html">Left Sidebar</a></li>					
-					
+					<li><a href="leftsidebar.html">Left Sidebar</a></li>
+
 				</ul>
 				-->
 				</li>
@@ -55,16 +55,16 @@
 					<li><a href="portfolio2.html">Two Columns</a></li>
 					<li><a href="portfolio3.html">Three Columns</a></li>
 					<li><a href="portfolio4.html">Four Columns</a></li>
-					<li><a href="portfolio5.html">Five Columns</a></li>					
+					<li><a href="portfolio5.html">Five Columns</a></li>
 					<li><a href="portfolio-masonry3.html">Three Masonry</a></li>
 					<li><a href="portfolio-masonry4.html">Four Masonry</a></li>
-					<li><a href="portfolio-masonry5.html">Five Masonry</a></li>					
+					<li><a href="portfolio-masonry5.html">Five Masonry</a></li>
 					<li><a href="singleproject.html">Project Details</a></li>
 				</ul>
 				-->
-				</li>				
+				</li>
 				<li class="last"><a href="contact.html">Contact</a></li>
-				
+
 			</ul>
 			</nav>
 		</div>
@@ -78,18 +78,19 @@
 	<div id="da-slider" class="da-slider">
 		<!--Slide 1-->
 		<div class="da-slide" style="">
-			
 
-			<h2> Instantly get a professional, <br> customized motion graphic. <br> All
-			for free! </h2>
 
+			<h2> Professional motion graphics.</h2>
+			<p>
+				Go to the template gallery for more motion graphics.
+			</p>
 			<a href="#" class="da-link" style="width:210px;">Get yours now</a>
 		</div>
 		<!--Slide 2-->
 		<div class="da-slide">
-			<h2> Animation 2 </h2>
+			<h2> Free of charge. </h2>
 			<p>
-				Description 2
+				Go to the template gallery for more motion graphics.
 			</p>
 			<a href="#" class="da-link" style="width:190px;">Link to video</a>
 			<div class="da-img">
@@ -98,9 +99,9 @@
 		</div>
 		<!--Slide 3-->
 		<div class="da-slide">
-			<h2> Animation 3 </h2>
+			<h2> Get it emailed to you seconds after. </h2>
 			<p>
-				Description 3
+				Go to the template gallery for more motion graphics.
 			</p>
 			<a href="#" class="da-link" style="width:190px">Link to video</a>
 			<div class="da-img">
@@ -124,7 +125,7 @@
 					<div class="introboxinner">
 						<span class="homeicone">
 						<i class="icon-bolt"></i>
-						</span> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+					</span> Recieve your customized motion graphic instantly over email within minutes, completely free of charge!
 					</div>
 				</div>
 				<!--Box 2-->
@@ -132,7 +133,7 @@
 					<div class="introboxinner">
 						<span class="homeicone">
 						<i class="icon-cog"></i>
-						</span> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+					</span> Customize the text and color of the motion graphic you want.
 					</div>
 				</div>
 				<!--Box 3-->
@@ -141,7 +142,7 @@
 						<span class="homeicone">
 						<i class="icon-lightbulb"></i>
 						</span>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+						Send in your own motion graphic templates to help provide people with more free motion grpahics!.
 					</div>
 				</div>
 			</div>
@@ -153,54 +154,6 @@
 <!-- START content area
 ================================================== -->
 <div class="grid">
-	<div class="row space-bot">
-		<!--INTRO-->
-		<div class="c12">
-			<div class="royalcontent">
-				<h1 class="royalheader">Customize Animations</h1>
-				<h1 class="title" style="text-transform:none;">Hundreds of animations you can customize for yourself.</h1>
-			</div>
-		</div>
-		<!--Box 1-->
-		<div class="c4">
-			<h2 class="title hometitlebg"><i class="icon-qrcode smallrightmargin"></i> Responsive Theme</h2>
-			<div class="noshadowbox">
-				<h5>DELIVERY</h5>
-				<p>
-					 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam hendrerit lacus mattis orci fermentum mollis iaculis purus lobortis. In et purus ut nunc elementum dapibus facilisis in quam.
-				</p>
-				<p class="bottomlink">
-					<a href="#" class="neutralbutton"><i class="icon-link"></i></a>
-				</p>
-			</div>
-		</div>
-		<!--Box 2-->
-		<div class="c4">
-			<h2 class="title hometitlebg"><i class="icon-cog smallrightmargin"></i> Unlimited Colors</h2>
-			<div class="noshadowbox">
-				<h5>QUALITY</h5>
-				<p>
-					 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam hendrerit lacus mattis orci fermentum mollis iaculis purus lobortis. In et purus ut nunc elementum dapibus facilisis in quam.
-				</p>
-				<p class="bottomlink">
-					<a href="#" class="neutralbutton"><i class="icon-link"></i></a>
-				</p>
-			</div>
-		</div>
-		<!--Box 3-->
-		<div class="c4">
-			<h2 class="title hometitlebg"><i class="icon-user" style="margin-right:10px;"></i> MultiPurpose Use</h2>
-			<div class="noshadowbox">
-				<h5>PRICING</h5>
-				<p>
-					 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam hendrerit lacus mattis orci fermentum mollis iaculis purus lobortis. In et purus ut nunc elementum dapibus facilisis in quam.
-				</p>
-				<p class="bottomlink">
-					<a href="#" class="neutralbutton"><i class="icon-link"></i></a>
-				</p>
-			</div>
-		</div>
-	</div>
 	<!-- SHOWCASE
 	================================================== -->
 	<div class="row space-top">
@@ -338,23 +291,8 @@
 			</div>
 		</div>
 	</div>
-	<!-- CALL TO ACTION 
+	<!-- CALL TO ACTION
 	================================================== -->
-	<div class="row space-bot">
-		<div class="c12">
-			<div class="wrapaction">
-				<div class="c9">
-					<h1 class="subtitles">Salique is incredibly awesome, with a refreshingly clean design</h1>
-					 We produce comprehensive mapping of consumers' relationships with communications across bought, owned & earned media based on bespoke insight. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam hendrerit lacus mattis orci fermentum mollis iaculis.
-				</div>
-				<div class="c3 text-center" style="margin-top:40px;">
-					<div class="actionbutton">
-						<i class=" icon-download-alt"></i> DOWNLOAD NOW
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
 </div><!-- end grid -->
 
 <!-- FOOTER
@@ -374,6 +312,7 @@
 			<div class="c3">
 				<h2 class="title"><i class="icon-twitter"></i> Follow us</h2>
 				<hr class="footerstress">
+				@Wlezien-Kuhn
 				<div id="ticker" class="query">
 				</div>
 			</div>
@@ -382,9 +321,9 @@
 				<h2 class="title"><i class="icon-envelope-alt"></i> Contact</h2>
 				<hr class="footerstress">
 				<dl>
-					<dt>2536 Zamora Road, Missisipi, 74C</dt>
-					<dd><span>Telephone:</span>+1 348 271 9483</dd>
-					<dd>E-mail: <a href="more.html">mail@yourweb.com</a></dd>
+					<dt>2502 Leon Street, Austin, TX</dt>
+					<dd><span>Telephone:</span>+1 281 755 7084</dd>
+					<dd>E-mail: <a href="more.html">romankuhn@romanfx.com</a></dd>
 				</dl>
 				<ul class="social-links" style="margin-top:15px;">
 					<li class="twitter-link smallrightmargin">
@@ -411,13 +350,9 @@
 				<ul>
 					<li>Services</li>
 					<li>Privacy Policy</li>
-					<li>Shortcodes</li>
-					<li>Columns</li>
 					<li>Portfolio</li>
 					<li>Blog</li>
 					<li>Contact</li>
-					<li>Font Awesome</li>
-					<li>Single Project</li>
 					<li>Home</li>
 				</ul>
 			</div>
@@ -430,11 +365,11 @@
 	<div class="grid">
 		<div class="row">
 			<div class="c6">
-				 Your Name &copy; 2015. All Rights Reserved.
+				 Alex Wlezien and Roman Kuhn &copy; 2017. All Rights Reserved.
 			</div>
 			<div class="c6">
 				<span class="right">
-				Premium Template by WowThemesNet </span>
+				Wlezien-Kuhn </span>
 			</div>
 		</div>
 	</div>
@@ -462,7 +397,7 @@
 
 <!-- Call Showcase - change 4 from min:4 and max:4 to the number of items you want visible -->
 <script type="text/javascript">
-$(window).load(function(){			
+$(window).load(function(){
 			$('#recent-projects').carouFredSel({
 				responsive: true,
 				width: '100%',
@@ -489,7 +424,7 @@ $(window).load(function(){
 					}
 				}
 			});
-		});	
+		});
 </script>
 
 <!-- Call opacity on hover images from carousel-->
