--- a/static/index.html
+++ b/static/index.html
@@ -165,153 +165,132 @@
 		</div>
 	</div>
 	<div class="row space-bot">
-		<div class="c12">
-			<div class="list_carousel">
-				<div class="carousel_nav">
-					<a class="prev" id="car_prev" href="#"><span>prev</span></a>
-					<a class="next" id="car_next" href="#"><span>next</span></a>
+
+		<div class="gallery-container">
+
+			<div class="gallery-div">
+
+				<div class="video-wrapper">
+					<img	src="posters/example.png" class="video-overlay">
+
+					</img>
+
+						<video class="gallery-video" poster="posters/example.png" muted>
+
+							<source src="videos/example.mp4" type="video/mp4">
+
+							</source>
+
+						</video>
+
 				</div>
-				<div class="clearfix">
-				</div>
-				<ul id="recent-projects">
-					<!--featured-projects 1-->
-					<li>
-					<div class="featured-projects">
-						<div class="featured-projects-image">
-							<a href="#">
-								<video id="myVideo" style="max-width: 100%;box-sizing: content-box;">
 
-												<source src="videos/example.mp4" type="video/mp4">
 
-												</source>
-
-								</video>
-
-								<script>
-
-								jQuery('#myVideo').bind("canplay", function() {
-									console.log("playing video");
-    							this.play(); // Should start video
-							});
-
-								</script>
-							</a>
-						</div>
-						<div class="featured-projects-content">
-							<h1><a href="#">Dolor sit amet</a></h1>
-							<p>
-								 porta acean pulvinar
-							</p>
-						</div>
-					</div>
-					</li>
-					<!--featured-projects 2-->
-					<li>
-					<div class="featured-projects">
-						<div class="featured-projects-image">
-							<a href="#"><img src="http://placehold.it/275x180" class="imgOpa" alt=""></a>
-						</div>
-						<div class="featured-projects-content">
-							<h1><a href="#">Nunc elementum </a></h1>
-							<p>
-								 porta acean pulvinar
-							</p>
-						</div>
-					</div>
-					</li>
-					<!--featured-projects 3-->
-					<li>
-					<div class="featured-projects">
-						<div class="featured-projects-image">
-							<a href="#"><img src="http://placehold.it/275x180" class="imgOpa" alt=""></a>
-						</div>
-						<div class="featured-projects-content">
-							<h1><a href="#">Sit amet</a></h1>
-							<p>
-								 porta acean pulvinar
-							</p>
-						</div>
-					</div>
-					</li>
-					<!--featured-projects 4-->
-					<li>
-					<div class="featured-projects">
-						<div class="featured-projects-image">
-							<a href="#"><img src="http://placehold.it/275x180" class="imgOpa" alt=""></a>
-						</div>
-						<div class="featured-projects-content">
-							<h1><a href="#">Dapibus facilisis</a></h1>
-							<p>
-								 porta acean pulvinar
-							</p>
-						</div>
-					</div>
-					</li>
-					<!--featured-projects 5-->
-					<li>
-					<div class="featured-projects">
-						<div class="featured-projects-image">
-							<a href="#"><img src="http://placehold.it/275x180" class="imgOpa" alt=""></a>
-						</div>
-						<div class="featured-projects-content">
-							<h1><a href="#">Nunc elementum</a></h1>
-							<p>
-								 porta acean pulvinar
-							</p>
-						</div>
-					</div>
-					</li>
-					<!--featured-projects 6-->
-					<li>
-					<div class="featured-projects">
-						<div class="featured-projects-image">
-							<a href="#"><img src="http://placehold.it/275x180" class="imgOpa" alt=""></a>
-						</div>
-						<div class="featured-projects-content">
-							<h1><a href="#">Dolor sit amet</a></h1>
-							<p>
-								 porta acean pulvinar
-							</p>
-						</div>
-					</div>
-					</li>
-					<!--featured-projects 7-->
-					<li>
-					<div class="featured-projects">
-						<div class="featured-projects-image">
-							<a href="#"><img src="http://placehold.it/275x180" class="imgOpa" alt=""></a>
-						</div>
-						<div class="featured-projects-content">
-							<h1><a href="#">HTML Theme</a></h1>
-							<p>
-								 porta acean pulvinar
-							</p>
-						</div>
-					</div>
-					</li>
-					<!--featured-projects 8-->
-					<li>
-					<div class="featured-projects">
-						<div class="featured-projects-image">
-							<a href="#"><img src="http://placehold.it/275x180" class="imgOpa" alt=""></a>
-						</div>
-						<div class="featured-projects-content">
-							<h1><a href="#">Salique bedroom</a></h1>
-							<p>
-								 porta acean pulvinar
-							</p>
-						</div>
-					</div>
-					</li>
-				</ul>
-				<div class="clearfix">
-				</div>
 			</div>
+
+			<div class="gallery-div">
+
+				<div class="video-wrapper">
+					<img	src="posters/example.png" class="video-overlay">
+
+					</img>
+
+						<video class="gallery-video" poster="posters/example.png" muted>
+
+							<source src="videos/example.mp4" type="video/mp4">
+
+							</source>
+
+						</video>
+
+				</div>
+
+
+			</div>
+			<div class="gallery-div">
+
+				<div class="video-wrapper">
+					<img	src="posters/example.png" class="video-overlay">
+
+					</img>
+
+						<video class="gallery-video" poster="posters/example.png" muted>
+
+							<source src="videos/example.mp4" type="video/mp4">
+
+							</source>
+
+						</video>
+
+				</div>
+
+
+			</div>
+			<div class="gallery-div">
+
+				<div class="video-wrapper">
+					<img	src="posters/example.png" class="video-overlay">
+
+					</img>
+
+						<video class="gallery-video" poster="posters/example.png" muted>
+
+							<source src="videos/example.mp4" type="video/mp4">
+
+							</source>
+
+						</video>
+
+				</div>
+
+
+			</div>
+			<div class="gallery-div">
+
+				<div class="video-wrapper">
+					<img	src="posters/example.png" class="video-overlay">
+
+					</img>
+
+						<video class="gallery-video" poster="posters/example.png" muted>
+
+							<source src="videos/example.mp4" type="video/mp4">
+
+							</source>
+
+						</video>
+
+				</div>
+
+
+			</div>
+
+			<div class="gallery-div">
+
+				<div class="video-wrapper">
+					<img	src="posters/example.png" class="video-overlay">
+
+					</img>
+
+						<video class="gallery-video" poster="posters/example.png" muted>
+
+							<source src="videos/example.mp4" type="video/mp4">
+
+							</source>
+
+						</video>
+
+				</div>
+
+
+			</div>
+
+
+
+
 		</div>
-	</div>
-	<!-- CALL TO ACTION
-	================================================== -->
-</div><!-- end grid -->
+
+	</div><!-- end grid -->
 
 <!-- FOOTER
 ================================================== -->
@@ -323,8 +302,8 @@
 				<a href="#top"><span></span></a>
 			</p>
 			<!-- 1st column -->
-			<div class="c3">
-				<img src="images/logo-footer.png" style="padding-top: 70px;" alt="">
+			<div class="c3" id="logo-footer">
+				<img src="images/logo-footer.png" style="" alt="">
 			</div>
 			<!-- 2nd column -->
 			<div class="c3">
@@ -455,6 +434,36 @@ $(document).ready(function(){
       $(this).stop().animate({opacity: "1.0"}, 'slow');
     });
   });
+</script>
+
+<script type="text/javascript">
+
+$(window).on('beforeunload', function() {
+ $(".gallery-video").hide();
+});
+
+	$(".gallery-video").hover(
+
+
+	function(){
+
+		var overlay = $(this).prev().get(0);
+		overlay.style.opacity="0";
+
+		$(this).get(0).play();
+	} ,
+
+	function(){
+		var video = $(this).get(0);
+		var overlay = $(this).prev().get(0);
+		overlay.style.opacity="1";
+		video.currentTime=0;
+		video.pause();
+
+		//video.currentTime = 1;
+		//video.pause();
+
+	});
 </script>
 
 </body>
